# payjoin-pyoxide

./: .env  .gitignore  Cargo.toml  Justfile  README.md  devenv.nix  devenv.yaml  payjoin_pyoxide_demo_sender.py  payjoin_pyoxide_receiver.py  pyproject.toml
bitcoinNode1/regtest/blocks/index/: 000005.ldb  000012.ldb  MANIFEST-000011
bitcoinNode1/regtest/chainstate/: 000005.ldb  000012.ldb  MANIFEST-000011
bitcoinNode2/: bitcoin.conf
bitcoinNode2/regtest/: .cookie
bitcoinNode2/regtest/chainstate/: 000005.ldb
src/: lib.rs
