[package]
name = "payjoin_pyoxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "payjoin_pyoxide"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.1"
bitcoin = "0.29.2"
payjoin = { version = "0.7.0", features = ["sender", "receiver"] }
bitcoincore-rpc = "0.16.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
rouille = "3.6.1"
base64 = "0.13.0"
log = "0.4.7"
env_logger = "0.9.0"
